--- a/force-app/main/default/aura/eadlTab/eadlTab.cmp
+++ b/force-app/main/default/aura/eadlTab/eadlTab.cmp
@@ -1,6 +1,15 @@
 <aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId" access="global" >
-    <aura:attribute name="developerName" type="String" access="global" default="eadx__mort_calc_Amortized_Schedule"/>
-    
-    <wave:waveDashboard developerName="{!v.developerName}" height="600"/>
-    
+    <lightning:layout>        
+        <lightning:layoutItem size="4" class="slds-box slds-theme_default">
+            <div class="slds-align_absolute-center">
+                Test text
+            </div>
+        </lightning:layoutItem>
+        <lightning:layoutItem size="4">
+            <wave:waveDashboard developerName="eadx__mort_calc_Mortgage_Calculator" height="600"/>
+        </lightning:layoutItem>
+        <lightning:layoutItem size="4">
+            <wave:waveDashboard developerName="eadx__mort_calc_Amortized_Schedule" height="600"/>
+        </lightning:layoutItem>
+    </lightning:layout>
 </aura:component>
