--- a/force-app/main/default/aura/tableauAuth/tableauAuth.cmp
+++ b/force-app/main/default/aura/tableauAuth/tableauAuth.cmp
@@ -1,9 +1,9 @@
 <aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,forceCommunity:availableForAllPageTypes,force:lightningQuickAction" access="global" >
     
-    <aura:attribute name="serverUrl" type="String" access="global" default="us-west-2b.online.tableau.com"/>
-    <aura:attribute name="siteNames" type="String[]" access="global" default="eadx,einsteinsandbox"/>
-    <aura:attribute name="siteName" type="String" access="global" default="eadx"/>
-    <aura:attribute name="username" type="String" access="global" default="df19codey@gmail.com"/>
+    <aura:attribute name="serverUrl" type="String" access="global" default="XXXXXXXX"/>
+    <aura:attribute name="siteNames" type="String[]" access="global" default="XXXXXXXX"/>
+    <aura:attribute name="siteName" type="String" access="global" default="XXXXXXXX"/>
+    <aura:attribute name="username" type="String" access="global" default="XXXXXXXX"/>
     <aura:attribute name="closeAction" type="String" access="global"/>
     <aura:attribute name="tableauAuth" type="Object" access="global"/>
     
