--- a/force-app/main/default/layouts/Fortnite_Player_Stats__c-Fortnite Player Stats Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Fortnite_Player_Stats__c-Fortnite Player Stats Layout.layout-meta.xml
@@ -14,6 +14,10 @@
                 <behavior>Required</behavior>
                 <field>Name</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>season__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
